--- a/catalogstyle.css
+++ b/catalogstyle.css
@@ -619,3 +619,118 @@ fieldset {
   border-bottom: none;
   color: blue;
 }
+
+.items-basket {
+  display: none;
+  position: relative;
+  padding: 0;
+  margin: 0;
+  background-color: #ffffff;
+  width: 540px;
+  height: 240px;
+}
+.items-list {
+  list-style-type: none;
+  padding-top: 20px;
+  margin-left: 20px;
+  margin-right: 30px;
+  border-bottom: 2px solid rgba(202, 202, 199, 1);
+}
+.items-list li {
+  display: flex;
+}
+.item1 {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+}
+.item1 p {
+  font-size: 13px;
+  font-weight: 400;
+  margin-top: 8px;
+}
+.item1::before {
+  content: "";
+  background-image: url(./img/basket-cros.svg);
+  background-repeat: no-repeat;
+  position: absolute;
+  width: 11px;
+  height: 11px;
+  top: 12px;
+  left: -30px;
+}
+.item2 {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  margin-top: 20px;
+}
+.item2 p {
+  font-size: 13px;
+  font-weight: 400;
+  margin-top: 0;
+}
+.item2::before {
+  content: "";
+  background-image: url(./img/basket-cros.svg);
+  background-repeat: no-repeat;
+  position: absolute;
+  width: 11px;
+  height: 11px;
+  top: 12px;
+  left: -30px;
+}
+.total {
+  position: absolute;
+  top: 125px;
+  left: 420px;
+  font-size: 15px;
+  font-weight: 700;
+  margin-bottom: 0;
+}
+.basket-list-button {
+  display: inline-block;
+  padding: 15px 15px;
+  font-weight: 700;
+  font-size: 18px;
+  text-align: center;
+  color: #ffffff;
+  vertical-align: top;
+  text-decoration: none;
+  background: #f26843;
+  background: linear-gradient(to bottom, #f26843, #e74a35);
+  border-radius: 50px;
+  box-shadow: 0 2px 2px rgba(172, 16, 0, 0.64);
+  border: none;
+  cursor: pointer;
+  position: absolute;
+  top: 170px;
+  left: 360px;
+}
+
+.modal-list {
+  width: 195px;
+  background-color: #ffffff;
+  display: none;
+}
+.list {
+  list-style-type: none;
+  padding: 0;
+}
+
+.list a {
+  text-decoration: none;
+  color: black;
+  font-size: 14px;
+  font-weight: 400;
+  padding-left: 20px;
+}
+.current-item-list {
+  background-color: #1E90FF;
+}
+.current-link {
+  color: #ffffff !important;
+}
+.modal-show {
+  display: block;
+}
