--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@
 }
 body {
   font-family: "roboto";
+  margin: 0 auto;
 }
 .site-wrapper {
   min-width: 940px;
@@ -30,15 +31,15 @@ body {
 }
 .site-wrapper-1 {
   background-color: rgb(132, 157, 143);
-  background-image: url(./img/group\ 1.png);
+  background-image: url(./img/backlight.png);
 }
 .site-wrapper-2 {
   background-color: #8996a6;
-  background-image: url(./img/group\ 2.png);
+  background-image: url(./img/backlight.png);
 }
 .site-wrapper-3 {
   background-color: #9d8b84;
-  background-image: url(./img/group\ 3.png);
+  background-image: url(./img/backlight.png);
 }
 
 .conteiner {
@@ -48,22 +49,13 @@ body {
   width: 1225px;
   margin: 0 auto;
 }
-.conteiner::after {
-  content: "";
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: -10px;
-  left: 100px;
-  background-repeat: no-repeat;
-  z-index: -1;
-}
 
 .header {
   display: flex;
   margin-top: 9px;
   height: 106px;
   position: relative;
+  justify-content: center;
 }
 .main-nav {
   list-style-type: none;
@@ -127,7 +119,7 @@ body {
 .modal-search {
   position: fixed;
   top: 60px;
-  left: 765px;
+  left: 920px;
   display: none;
 }
 
@@ -247,14 +239,17 @@ body {
 
 .slider {
   position: relative;
-  padding-top: 321px;
   text-align: center;
   color: #ffffff;
+  height: 547px;
 }
 .slider-list {
   margin: 0;
   padding: 0;
   list-style-type: none;
+}
+.slider-item {
+  height: 547px;
 }
 .slide {
   display: none;
@@ -262,7 +257,12 @@ body {
 .slide-current {
   display: block;
 }
+.slider-img {
+  position: relative;
+}
 .slide-title {
+  position: relative;
+  top: -280px;
   width: 700px;
   margin: 0 auto;
   margin-bottom: 27px;
@@ -270,6 +270,8 @@ body {
   font-weight: 800;
 }
 .button {
+  position: relative;
+  top: -290px;
   display: inline-block;
   padding: 12px 44px;
   font-weight: 600;
@@ -1050,7 +1052,7 @@ body {
 .modal-feedback {
   position: fixed;
   top: 336px;
-  left: 550px;
+  left: 700px;
   display: none;
 }
 .feedback h2 {
