--- a/catalogstyle.css
+++ b/catalogstyle.css
@@ -454,12 +454,25 @@ fieldset {
   color: rgba(255, 255, 255, 1);
 }
 .goods {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
   margin-top: 40px;
 }
 .item {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 270px;
+
   position: relative;
+  z-index: 9999;
+  
+}
+.item:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+  box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.4);
 }
 .item-text {
   font-family: "roboto";
@@ -475,8 +488,27 @@ fieldset {
   color: white;
   text-shadow: 0.5px 0.9px 3px rgba(49, 50, 53, 0.5);
   position: absolute;
-  top: 171px;
+  top: 170px;
   left: 0px;
+}
+.item-button {
+  font-weight: 600;
+  font-size: 18px;
+  text-align: center;
+  color: #ffffff;
+  vertical-align: top;
+  text-decoration: none;
+  background: #f26843;
+  background: linear-gradient(to bottom, #f26843, #e74a35);
+  border-radius: 25px;
+  box-shadow: 0 2px 2px rgba(172, 16, 0, 0.64);
+  border: none;
+  cursor: pointer;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  width: 196px;
+  display: none;
+  z-index: 1;
 }
 .kilogram {
   font-family: "Roboto";
@@ -623,11 +655,14 @@ fieldset {
 .items-basket {
   display: none;
   position: relative;
+  top: -1525px;
+  left: 935px;
   padding: 0;
   margin: 0;
   background-color: #ffffff;
   width: 540px;
   height: 240px;
+  border-radius: 10px;
 }
 .items-list {
   list-style-type: none;
@@ -726,7 +761,7 @@ fieldset {
   padding-left: 20px;
 }
 .current-item-list {
-  background-color: #1E90FF;
+  background-color: #1e90ff;
 }
 .current-link {
   color: #ffffff !important;
